--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,13 @@ dependencies {
 	// You may need to force-disable transitiveness on them.
 	// Replace modImplementation with modApi if you expose components in your own API
 
-	// Replace modImplementation with modApi if you expose components in your own API
-	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.8.0"
-	// Includes Cardinal Components API as a Jar-in-Jar dependency (optional but recommended)
+
+	modApi "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.8.0"
+	// Includes Cardinal Components API as a Jar-in-Jar dependency
 	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.8.0"
 
-	// Replace modImplementation with modApi if you expose components in your own API
 	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-world:2.8.0"
-	// Includes Cardinal Components API as a Jar-in-Jar dependency (optional but recommended)
+	// Includes Cardinal Components API as a Jar-in-Jar dependency
 	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-world:2.8.0"
 
 }
