--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.0.4-mc1.17
+	mod_version = 1.1.0
 	maven_group = de.rcbnetwork
 	archives_base_name = lurchium
 
